--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,10 @@
-<h1>hi</h1>
+<form action="/" method="post">
+<div class="input-group mb-3">
+  <input type="text" class="form-control" placeholder="Please enter URL here ..." aria-label="Recipient's username"
+    aria-describedby="button-addon2">
+  <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Shorten</button>
+</div>
+</form>
+
+
+
