--- a/views/done.hbs
+++ b/views/done.hbs
@@ -1,2 +1,14 @@
-<h4>sucess</h4>
-<p>your url: http://localhost:3000/{{ code }}</p>
+<label for="url">Your short URL is:</label>
+<div class="input-group mt-4">
+  <input id="url" name="url" type="url" class="form-control" placeholder=" http://localhost:3000/{{ code }}" 
+  value=" http://localhost:3000/{{ code }}">
+  <button class="btn btn-outline-success" type="button" onclick="copy()">copy</button>
+</div>
+
+<script>
+  const copy = () => {
+    document.querySelector('#url').select()
+    document.execCommand('Copy')
+    alert('Copied!')
+  }
+</script>
