--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,8 @@
 <form action="./" method="post">
-<div class="input-group mb-3">
-  <input name="url" type="text" class="form-control" placeholder="Please enter URL here ..." aria-label="Recipient's username"
-    aria-describedby="button-addon2">
-  <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Shorten</button>
-</div>
+<label for="url">Enter an https:// URL:</label>
+  <div class="input-group mt-4">
+    <input name="url" type="url" class="form-control" placeholder="https://example.com" pattern="https://.*" 
+      required aria-label="Enter an URL" aria-describedby="button-addon2">
+    <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Shorten</button>
+  </div>
 </form>
-
-
-
