--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,14 +13,14 @@
 <body>
 
   <div class="container mt-3">
-    <div class="card mb-3 mx-auto" style="max-width: 540px;">
+    <div class="card mb-3 mx-auto" style="max-width: 740px;">
       <div class="row g-0 p-3">
-        <div class="col-md-4">
+        <div class="col-md-4 w-25 mx-auto">
           <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png"
             class="img-fluid rounded-start" alt="...">
         </div>
         <div class="col-md-8">
-          <div class="card-body">
+          <div class="card-body mt-4 ms-4">
             {{{body}}}
           </div>
         </div>
