refactor: modify express routes

--- a/views/done.hbs
+++ b/views/done.hbs
@@ -5,6 +5,9 @@
   <button class="btn btn-outline-success" type="button" onclick="copy()">copy</button>
 </div>
 
+<a href="/"><button type="button" class="btn btn-dark mt-3 p-1">One More
+</button></a>
+
 <script>
   const copy = () => {
     document.querySelector('#url').select()
