--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<form action="./" method="post">
+<form action="./shorten" method="post">
 <label for="url">Enter an https:// URL:</label>
   <div class="input-group mt-4">
     <input name="url" type="url" class="form-control" placeholder="https://example.com" pattern="https://.*" 
