--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,8 @@
 <form action="./shorten" method="post">
-<label for="url">Enter an https:// URL:</label>
-  <div class="input-group mt-4">
-    <input name="url" type="url" class="form-control" placeholder="https://example.com" pattern="https://.*" 
+<label class="fs-5 fw-bold" for="url">Enter an https : //  URL:</label>
+  <div class="input-group mt-3">
+    <input name="url" type="url" class="form-control bg-secondary bg-opacity-25" placeholder="https://example.com" pattern="https://.*" 
       required aria-label="Enter an URL" aria-describedby="button-addon2">
-    <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Shorten</button>
+    <button class="btn btn-secondary" type="submit" id="button-addon2">Shorten</button>
   </div>
 </form>
