--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,7 +10,7 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-light">
 
   <div class="container mt-3">
     <div class="card mb-3 mx-auto" style="max-width: 740px;">
@@ -19,11 +19,8 @@
           <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png"
             class="img-fluid rounded-start" alt="...">
         </div>
-        <div class="col-md-8">
-          <div class="card-body mt-4 ms-4">
-            {{{body}}}
-          </div>
-        </div>
+        {{{body}}}
+        
       </div>
     </div>
   </div>
